--- a/_config.yml
+++ b/_config.yml
@@ -26,12 +26,12 @@ kramdown:
 
 # Site owner
 owner:
-  name: Your Name
+  name: Ro Espinosa
   avatar: bio-photo.jpg
-  bio: "Describe your self."
+  bio: "IT and Business for Human Development."
   email: 
   disqus-shortname: 
-  twitter: 
+  twitter: roespinosa13
   facebook: 
   google:
     plus: 
