--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site wide configuration
 
-title:            Site Title
+title:            Ro Espinosa
 locale:           en_US
 url:              http://localhost:4000
 
