--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            Ro Espinosa
 locale:           en_US
-url:              http://localhost:4000
+url:              http://roespinosa13.github.io/roespinosa13
 
 
 # Jekyll configuration
