--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            RoEspinosa.com
 locale:           en_US
-url:              ttp://roespinosa13.github.io/roespinosa13
+url:              http://roespinosa13.github.io/roespinosa13
 
 
 # Jekyll configuration
