--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site wide configuration
 
-title:            RoEspinosa.com
+title:            RoEspinosa.net
 locale:           en_US
 url:              http://roespinosa13.github.io/roespinosa13
 
@@ -43,7 +43,7 @@ owner:
   github: 
   stackoverflow:
   linkedin:
-  instagram: 
+  instagram: roespinosa13
   lastfm:
   tumblr:
   pinterest:
