--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site wide configuration
 
-title:            Minimal Mistakes
+title:            RoEspinosa.net
 locale:           en_US
 url:              http://mmistakes.github.io/minimal-mistakes
 
@@ -28,22 +28,22 @@ kramdown:
 owner:
   name: Michael Rose
   avatar: bio-photo.jpg
-  bio: "Just another boring, time traveling, tattooed, designer from Buffalo New York."
-  email: michael@mademistakes.com
-  disqus-shortname: minimalmistakes
-  twitter: mmistakes
-  facebook: michaelrose
+  bio: "Information Technologies & Business for Human Development. Ex-Azteca #UDLAP, Construyendo este blog."
+  email: ro13espinosa@gmail.com
+  disqus-shortname: 
+  twitter: ro13espinosa
+  facebook: 
   google:
-    plus: +MichaelRoseDesign
-    analytics: UA-2011187-3
-    verify: UQj93ERU9zgECodaaXgVpkjrFn9UrDMEzVamacSoQ8Y
-    ad-client: ca-pub-7328585512091257
-    ad-slot: 7855747535
-  bing-verify: D81F4C18A6CB3018F64D7C827D953DFD
-  github: mmistakes
+    plus: 
+    analytics: 
+    verify: 
+    ad-client: 
+    ad-slot: 
+  bing-verify: 
+  github: 
   stackoverflow:
   linkedin:
-  instagram: mmistakes
+  instagram: 
   lastfm:
   tumblr:
   pinterest:
