--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            RoEspinosa.net
 locale:           en_US
-url:              http://http://roespinosa13.github.io/roespinosa13
+url:              http://roespinosa13.github.io/roespinosa13
 
 
 # Jekyll configuration
