--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ kramdown:
 # Site owner
 owner:
   name: Roberto Espinosa
-  avatar: bio-photo.jpg
+  avatar: bio-re13.png
   bio: "Information Technologies & Business for Human Development. Ex-Azteca #UDLAP, Construyendo este blog."
   email: ro13espinosa@gmail.com
   disqus-shortname: 
