--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ kramdown:
 owner:
   name: Roberto Espinosa
   avatar: bio-re13.png
-  bio: "Information Technologies & Business for Human Development. <br> Ex-Azteca #UDLAP, Construyendo este blog."
+  bio: "Information Technologies & Business for Human Development. <br> Ex-Aztecas Basketball #UDLAP.<br> Exploring the Blog-side of the Internet."
   email: ro13espinosa@gmail.com
   disqus-shortname: 
   twitter: ro13espinosa
