--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url:              http://roespinosa13.github.io/roespinosa13
 
 permalink:   /:categories/:title/
 markdown:    kramdown
-highlighter: rouge
+highlighter: pygments
 sass:
   sass_dir: _sass
   style: compressed
