--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ owner:
   name: Roberto Espinosa
   avatar: bio-re13.png
   bio: "Information Technologies & Business for Human Development. <br> Ex-Aztecas Basketball #UDLAP.<br> Exploring the Blog-side of the Internet."
-  email: <a href="mailto:ro13espinosa@gmail.com">Gmail/a> 
+  email: <a href="mailto:ro13espinosa@gmail.com">Gmail</a> 
   disqus-shortname: 
   twitter: ro13eespinosa
   facebook: 
@@ -42,7 +42,7 @@ owner:
   bing-verify: 
   github: 
   stackoverflow:
-  linkedin: Click <a href="https://www.linkedin.com/pub/roberto-espinosa/a2/a2/273">here</a> LinkedIn.
+  linkedin: <a href="https://www.linkedin.com/pub/roberto-espinosa/a2/a2/273">LinkedIn</a>
   instagram: 
   lastfm:
   tumblr:
