--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ owner:
   facebook: 
   google:
     plus: 
-    analytics: 
+    analytics: ro13espinosa
     verify: 
     ad-client: 
     ad-slot: 
