--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ owner:
   google:
     plus: 
     analytics: ro13espinosa
-    verify: 
+    verify: UA-56919414-1
     ad-client: 
     ad-slot: 
   bing-verify: 
