--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site wide configuration
 
-title:            ROESPINOSA.net
+title:            roespinosa.NET
 locale:           en_US
 url:              http://roespinosa.net
 
