--- a/_config.yml
+++ b/_config.yml
@@ -35,17 +35,8 @@ owner:
   facebook: 
   google:
     plus: 
-    analytics: ro13espinosa
-    verify: <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-56919414-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
+    analytics: UA-56919414-1
+    verify: UA-56919414-1
     ad-client: 
     ad-slot: 
   bing-verify: 
