--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site wide configuration
 
-title:            roespinosa.NET
+title:            Roespinosa.net
 locale:           en_US
 url:              http://roespinosa.net
 
