--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,8 @@ owner:
   avatar: bio-re13.png
   bio: "Information Technologies & Business for Human Development. <br> Ex-Aztecas Basketball #UDLAP.<br> Exploring the Blog-side of the Internet."
   email: Gmail
-  disqus-shortname: 
-  twitter: ro13eespinosa
+  disqus-shortname: roespinosa.net
+  twitter: roespinosa13
   facebook: 
   google:
     plus: 
