--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,8 @@ owner:
   facebook: 
   google:
     plus: 
-    analytics: UA-56919414-1
-    verify: UA-56919414-1
+    analytics: 
+    verify: 
     ad-client: 
     ad-slot: 
   bing-verify: 
