--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ owner:
   avatar: bio-re13.png
   bio: "Information Technologies & Business for Human Development. <br> Ex-Aztecas Basketball #UDLAP.<br> Exploring the Blog-side of the Internet."
   email: Gmail
-  disqus-shortname: roespinosa.net
+  disqus-shortname: roespinosanet
   twitter: roespinosa13
   facebook: 
   google:
