--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ kramdown:
 
 # Site owner
 owner:
-  name: <a href="http://roespinosa.net/about/">Roberto Espinosa</a>
+  name: Roberto Espinosa
   avatar: bio-re13.png
   bio: "Information Technologies & Business for Human Development. <br> Ex-Aztecas Basketball #UDLAP.<br> Exploring the Blog-side of the Internet."
   email: Gmail
