--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site wide configuration
 
-title:            Roespinosa.net
+title:            Roespinosa.co
 locale:           en_US
-url:              http://roespinosa.net
+url:              http://roespinosa.co
 
 
 # Jekyll configuration
