--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,5 @@ url:              http://roespinosa.co
 
 # Jekyll configuration
 
-<p><img alt="" src="http://postimg.org/image/xkb5dvy95/" /></p>
+<p><img alt="" src="http://s28.postimg.org/69pu5yvcc/comingsoon.jpg" /></p>
+
