--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
 # Site wide configuration
 
-title:            Ro Espinosa .co
+title:            r o e s p i n o s a
 locale:           en_US
 url:              http://roespinosa.co
-
 
 # Jekyll configuration
 
