--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            r o e s p i n o s a
 locale:           en_US
-url:              http://roespinosa.co
+url:              http://s28.postimg.org/69pu5yvcc/comingsoon.jpg
 
 # Jekyll configuration
 
